bifrost/static/css/style.css
#main {
  float: left;
  width: 610px;
  padding: 10px 20px;
}

#sidebar {
  float: right;
  margin-top: 10px;
  width: 220px;
  padding: 10px;
}

#navbar-icon {
  width: 20px;
  height: 20px;
}

#navbar-brandname {
  margin-left: 20px;
}

#title-sidebar {
  font-size: 18px;
  font-weight: bold;
}

#welcome {
  margin-top: 6em;
}

#welcome li {
  font-size: 1.5em;
}

#wrap {
  width: 900px;
  margin: 0 auto;
}

#match-player {
  width: 480px;
  height: 400px;
}

#about-logo {
    width: 100px;
    margin-left: 8px;
    height: 100px;
}

.register, .login, .table-submissions .challenges {
  margin: auto;
  width: 450px;
}

.body-top-margin {
  margin-top: 60px;
}

.newchallenge {
  margin: auto;
  width: 650px;
}

.newgroup {
  margin: auto;
  width: 650px;
}

.error {
  margin: auto;
  width: 850px;
}

.register-fail, .login-fail {
  margin-bottom: 1em;
}

.text-center {
  text-align: center;
}

.login .last-p {
  margin-bottom: 2em;
}

.dashboard h2 {
  font-weight: bold;
}

.dashboard .data {
  color: #DF691A;
  font-weight: bold;
}

.mainblock h1 {
  text-align: center;
}

.mainblock {
  margin: 3.5% 20%;
}

.inside-well-margin {
  margin: 2% 5%;
}

.bigbutton {
  text-align: center;
  padding: 24px 48px;
  font-size: 24px;
  line-height: 1.33;
  border-radius: 0;
}

.anchor-center {
  display: block;
  text-align: center;
}

.hr-small {
  margin-top: 5px;
  margin-bottom: 5px;
}

.wrap-generic-content {
  width: 700px;
  margin: auto auto;
}

.float-left {
  float: left;
}

.float-right {
  float: right;
}

.width-380 {
  width: 380px;
}

.width-200 {
  width: 200px;
}

.height-60 {
  height: 60px;
}

.margin-center {
  margin: auto auto;
}

.margin-top-15 {
  margin-top: 15px;
}

.margin-top-20 {
  margin-top: 20px;
}

.margin-top-55 {
  margin-top: 55px;
}

.margin-left-16 {
  margin-left: 16px;
}

.margin-right-16 {
  margin-right: 16px;
}

.news-subtitle {
  margin-top: -15px;
  color: #808088;
}

.color-white {
  color: #FFFFFF;
}

.width-500 {
  width: 500px;
}

.width-255 {
  width: 255px;
}

.width-42 {
  width: 42px;
}

.popover {
  width: 600px;
}

.relative {
  position: relative;
}

.absolute {
  position: absolute;
}

